deploy/k8s/encodec-api/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: encodec-api-ingress
  namespace: encodec-api
  annotations:
    haproxy.org/server-ssl: "true"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: encodec-api-ingress
  ports:
    - name: https
      port: 8443
      targetPort: https
---
apiVersion: v1
kind: Service
metadata:
  name: encodec-api-ingress-internal
  namespace: encodec-api
  annotations:
    haproxy.org/server-ssl: "true"
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: encodec-api-ingress
  ports:
    - name: https
      port: 8443
      targetPort: https
