deploy/k8s/encodec-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: encodec-api
  namespace: encodec-api
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - encodec.wavey.ai
      secretName: encodec-wavey-ai-tls
  rules:
    - host: encodec.wavey.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: encodec-api-ingress
                port:
                  number: 8443
